<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle" >

    <TextView
        android:id="@+id/header"
        style="@style/ActivityHeaderStyle"
        android:layout_alignParentTop="true"
        android:text="@string/entry_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_new_game"
            style="@style/MenuButtonStyle"
            android:layout_marginBottom="8dp"
            android:background="@drawable/menu_button"
            android:text="@string/button_new_game" />

        <Button
            android:id="@+id/button_viewscore"
            style="@style/MenuButtonStyle"
            android:layout_marginBottom="8dp"
            android:background="@drawable/menu_button"
            android:text="@string/button_view_highscore" />
    </LinearLayout>

</RelativeLayout>