<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/highscore_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/four"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="20dp"
        android:text="@string/highscore_title"
        android:textColor="@color/one"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/tableRowHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_no"
            style="@style/TableHeaderView"
            android:layout_marginRight="1dp"
            android:layout_weight="1.5"
            android:text="#" />

        <TextView
            android:id="@+id/textView_name"
            style="@style/TableHeaderView"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:text="@string/highscore_col_name" />

        <TextView
            android:id="@+id/textView_points"
            style="@style/TableHeaderView"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:text="@string/highscore_col_points" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/one"
        android:scrollbars="@null" >

        <ViewFlipper
            android:id="@+id/viewflipper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/highscore_table_layout_sp"
                style="@style/LayoutStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TableLayout
                android:id="@+id/highscore_table_layout_mp"
                style="@style/LayoutStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ViewFlipper>
    </ScrollView>

    <RadioGroup
        android:id="@+id/buttongroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/one"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingTop="8dp" >

        <RadioButton
            android:id="@+id/radio_button_sp"
            style="@style/RadioButtonStyle"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="8dp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_button_mp"
            style="@style/RadioButtonStyle"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="8dp" />
    </RadioGroup>

</LinearLayout>